Some changes in duplicates